# bazel-rollup-repro

./: BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
src/: app.ts
